fix overflow pading and margin

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: black;
+  overflow-x: hidden; 
   /* background-color: #242424; */
 
   font-synthesis: none;
@@ -14,7 +15,16 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-html {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html, body, #root {
+  width: 100%;
+  min-height: 100vh;
+  overflow-x: hidden;
   scroll-behavior: smooth;
 }
 
